@@ -72,7 +72,7 @@ span.block	{display:block;}
 .wrap_bar			{display:inline-block; vertical-align:middle; width:400px;}
 .wrap_code			{text-align:right; width:480px; border-right:1px solid #999; padding:10px 20px 10px 0;}
 .wrap_bar			{height:24px;}
-.sector_code		{margin-left:10px; background-color:rgba(72,79,86,0.7); padding:2px 5px; border-radius:4px; font-size:11px; color:#FFF; white-space:nowrap;}
+.sector_code		{margin-left:10px; background-color:rgba(48,57,70,0.7); padding:2px 5px; border-radius:4px; font-size:11px; color:#FFF; white-space:nowrap;}
 .sector_code:nth-of-type(3)	{margin-left:5px;}
 .sector_bar,
 .sector_value		{display:inline-block; vertical-align:middle;}
@@ -141,7 +141,7 @@ span.doc_rec	{background-color:rgba(22,24,37,0.6);}
 .tab_currency	{width:40%; padding-left:30px; text-align:right; font-size:12px; color:#ccc;}
 
 /*	PROVIDER, RECEIVER ORG	*/
-.type			{font-size:11px; line-height:initial; color:#CCC; margin:0 auto; border-radius:4px; padding:2px 4px 3px 4px; background-color:rgba(72,79,86,0.6);}
+.type			{font-size:11px; color:#CCC; margin:0 auto; border-radius:4px; padding:2px 4px 3px 4px; background-color:rgba(72,79,86,0.6);}
 .ref			{font-size:11px; line-height:initial; color:#CCC; margin:0 auto;}
 
 
