@@ -363,7 +363,7 @@
 
 <!--	SECTOR DAC TEMPLATE	-->
 #^/sector_dac
-<div class="sector" title="{_it.@code-description||}">
+<div class="sector">
 	<div class="wrap_code">
 		<span class="sector_code_text">{_it.@code-name||}</span><span class="sector_code">{_it.@code||}</span>
 	</div><div class="wrap_bar">
