@@ -1,3 +1,8 @@
+Development Portal (2020-01-04 shi)
+==============================
+Update IATI Spend default year to 2017
+
+
 Development Portal (2019-12-09 shi)
 ==============================
 Fix sector group and category icons and text
